--- a/frontend/src/Components/ComponentsCSS/Navbar.css
+++ b/frontend/src/Components/ComponentsCSS/Navbar.css
@@ -1,6 +1,10 @@
 nav {
   box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0px;
   height: 80px;
+  background-color: white;
+  z-index: 2;
 }
 .nav-item {
   font-weight: bold;
