Add register page

--- a/frontend/src/Pages/PagesCSS/LoginPage.css
+++ b/frontend/src/Pages/PagesCSS/LoginPage.css
@@ -1,4 +1,4 @@
-.loginpage {
+.login-register-page {
   margin-top: 50px;
   background-color: #f8ef42;
   background-image: linear-gradient(315deg, #f8ef42 0%, #0fd64f 74%);
