--- a/frontend/src/Components/ComponentsCSS/Patients.css
+++ b/frontend/src/Components/ComponentsCSS/Patients.css
@@ -21,4 +21,13 @@
   #bigtable {
     font-size: 10px;
   }
+  .iconbutton {
+    width: 10px;
+    height: 10px;
+  }
+  .patients {
+    margin: 150px 10px 10px 10px;
+    padding: 0;
+    font-size: 10px;
+  }
 }
